@@ -44,6 +44,8 @@
 
   * Include offset in PackStreamReader results. (Dave Borowitz)
 
+  * Move PackStreamReader from server to pack. (Dave Borowitz)
+
  TEST CHANGES
 
   * If setuptools is installed, "python setup.py test" will now run the testsuite.
